<resources>
    <string name="app_name">BudgetApp</string>
    <string name="pw_requirements">*You must create a password with at least 1 digit, 1 special character and 1 uppercase letter* \n special characters accepted are !@#$%^&amp;*()_+</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="delete_prompt">Note: clicking this button will delete all budgets from history. this is a final action as they can\'t be retrieved.  </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="logout">Logout</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="explanation">
        Navigate to the menu tabs below by clicking twice on a location in order to explore creating budgets and tracking expenses to become more financially organized!
    </string>
    <string name="chooser_title">Select Calendar App</string>
    <string name="discover">Discover</string>
    <string name="webviewDescrip">Read below for budgeting advice from Nerd Wallet and use their budgeting calculator to help budget smarter!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="create_budget_title">Create New Budget</string>
    <string name="editName">*Enter name:</string>
    <string name="editAmt">*Enter amount:</string>
    <string name="editDate">Set start date:</string>
    <string name="editCategory">Pick a Category:</string>
    <string name="editComment">Comment:</string>
    <string name="saveButton">Save</string>
    <string name="searchButton">Searching</string>
    <string name="nav_home">Home</string>
    <string name="nav_budget">Budgets</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_make_budget">Make Budget</string>
    <string name="signup">Create Account</string>
    <string name="createUsername">Enter a email: </string>
    <string name="createFirstName">Enter first name:</string>
    <string name="createLastName">Enter last name:</string>
    <string name="createPW">Enter a password:</string>
    <string name="createProfile">Set Up Profile</string>
    <string name="makeUsername">Enter a username:</string>
    <string name="editIncome">Enter user income:</string>
    <string name="endDate">Set end date:</string>
    <string name="requiredWarning">Note: fields with * are required!\nDates should be in format (MM/DD/YYYY).</string>
    <string name="createUserWarning">*Note: you can only set your username once*</string>
    <string-array name="budgetCategories">
        <item>Housing</item>
        <item>Insurance</item>
        <item>Medical</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Personal Care</item>
        <item>Entertainment</item>
        <item>Savings</item>
        <item>Other</item>
    </string-array>
</resources>