<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddBudget"
    android:id="@+id/edit_budget_layout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="20dp"
    android:background="@color/teal_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <EditText
            android:inputType="text"
            android:id="@+id/edit_budget_name"
            android:hint="@string/editName"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelBudgetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@android:drawable/ic_delete"
            app:backgroundTint="#8AFFFFFF"
            app:fabSize="mini" />


    </LinearLayout>


    <TextView
        android:id="@+id/pick_category_text"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editCategory"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <Spinner
        android:layout_margin="5dp"
        android:id="@+id/edit_budget_category"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/budgetCategories"
        android:spinnerMode="dropdown" />

    <EditText
        android:layout_margin="5dp"
        android:inputType="text"
        android:id="@+id/edit_budget_date"
        android:hint="@string/editDate"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="18sp"/>

    <EditText
        android:layout_margin="5dp"
        android:inputType="numberDecimal"
        android:id="@+id/edit_budget_amt"
        android:layout_width="50dp"
        android:hint="@string/editAmt"
        android:textColor="@color/black"
        android:layout_height="48dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edit_budget_comment"
        android:inputType="text"
        android:layout_margin="5dp"
        android:hint="@string/editComment"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="48dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/saveButton" />

</LinearLayout>