<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/createAccountContainer"
    android:orientation="vertical"
    tools:context=".ui.login.SignUpFragment"
    android:layout_margin="30dp"
    android:padding="10dp"
    android:background="@color/peach">

    <TextView
        android:id="@+id/createAccount"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/createFirstName"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/createFirstName"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/createLastName"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/createLastName"
            android:autofillHints="name"/>

    </LinearLayout>



    <EditText
        android:id="@+id/createUsername"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/createUsername"/>
    <EditText
        android:id="@+id/createPassword"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/createPW"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/signup"/>



</LinearLayout>