<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/budget_activity_container"
    tools:context=".ui.budget.CreateBudgetActivity">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:padding="10dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/logout_button_budget"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/logout"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="end"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    app:srcCompat="@drawable/baseline_logout_24" />


        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/webViewDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_budget"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@color/teal_200"
            android:fontFamily="sans-serif"
            android:text="@string/webviewDescrip"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/create_budget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_above="@id/edit_budget_layout"
            android:background="@color/gold"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text="@string/create_budget_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/edit_budget_layout"
            android:layout_width="match_parent"
            android:layout_above="@id/bottom_navigation_budget"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/teal_200"
            android:orientation="vertical"
            android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/requiredWarning"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    android:padding="3dp"
                    android:fontFamily="sans-serif"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >
                        <EditText
                            android:id="@+id/edit_budget_name"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:hint="@string/editName"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                        <EditText
                            android:id="@+id/edit_budget_amt"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:hint="@string/editAmt"
                            android:inputType="numberDecimal"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                        <Button
                            android:id="@+id/edit_budget_start_date"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:text="@string/editDate"
                            android:clickable="true"
                            android:backgroundTint="@color/gold"
                            android:layout_gravity="center"
                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/edit_budget_end_date"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:clickable="true"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:backgroundTint="@color/gold"
                            android:text="@string/endDate" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:orientation="vertical"
                            android:background="@color/gold"
                            android:layout_gravity="center_vertical">
                                <TextView
                                    android:id="@+id/pick_category_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/editCategory"
                                    android:textColor="@color/black"
                                    android:textSize="14sp" />

                                <Spinner
                                    android:id="@+id/edit_budget_category"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:entries="@array/budgetCategories"
                                    android:spinnerMode="dropdown" />

                        </LinearLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/edit_budget_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editComment"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:text="@string/saveButton" />

        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_navigation_menu"
            />

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/create_budget_title"
            android:layout_below="@id/webViewDescrip" />



</RelativeLayout>