<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/coral"
    android:textAlignment="textStart"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/baseline_assured_workload_24" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:contentDescription="@string/logout"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_logout_24" />

    <TextView
        android:id="@+id/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/floatingActionButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/explanation"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_logo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/explanation"
        />


</RelativeLayout>




